general code tidy from advisories